fix flickering menu

--- a/source/_docs/patterns/03-organisms/navigation/main-navigation/_ulti-menu.scss
+++ b/source/_docs/patterns/03-organisms/navigation/main-navigation/_ulti-menu.scss
@@ -87,6 +87,7 @@ Overwrite to reset default ultimenu styles.
     li a:active + .ultimenu__flyout,
     li a:focus + .ultimenu__flyout {
       padding: unset;
+      transition-delay: 0;
     }
   }
 }
